2022-10-31  G. Branden Robinson <g.branden.robinson@gmail.com>

	[eqn]: Fix Savannah #63299.

	* src/preproc/eqn/main.cpp: Revise input file line number
	handling.
	(read_line): Stop dealing with `current_lineno` here; it's now
	up to its caller (`do_file()`) to manipulate the line number.
	(do_file): When reading new file, initialize `current_lineno` to
	1 instead of 0.  Reset it to zero when encountering EOF (so that
	diagnostics will not include a line number at all).  When
	performing nested call to `read_line()` to gather '.EN' from
	input, increment the line number.  Write correct line number in
	output groff `lf` requests; in groff, its first argument assigns
	the number of the _next_ input line.  Increment line number at
	end of outer `read_line()` loop.

	Fixes <https://savannah.gnu.org/bugs/?63299>.  Thanks to Alex
	Colomar for the report.

2022-10-31  G. Branden Robinson <g.branden.robinson@gmail.com>

	[eqn]: Regression-test Savannah #63299.

	* src/preproc/eqn/tests/\
	diagnostics-report-correct-line-numbers.sh: Do it.
	* src/preproc/eqn/eqn.am (eqn_TESTS, TESTS, EXTRA_DIST): Run
	test.

2022-10-30  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/utils/grog/grog.pl (fail, warn, construct_command)
	(version): Restore trailing newlines to `print`ed output.  They
	went missing when I removed the assignment of the output record
	separator in commit 6f2e367836, 24 October.  Thanks to Dave
	Kemper for catching this.

2022-10-30  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/preproc/preconv/preconv.cpp: Trivially refactor.  Rename
	`default_encoding` to `fallback_encoding` for clarity.  Update
	comments and debugging diagnostic messages accordingly.

2022-10-29  G. Branden Robinson <g.branden.robinson@gmail.com>

	[grolj4]: Absorb lj4_font(5) man page into grolj4(1).

	* src/devices/grolj4/lj4_font.5.man: Delete, moving content...
	* src/devices/grolj4/grolj4.1.man (Fonts): ...hither.

	* doc/doc.am (GROFF_MAN_PAGES1):