@@ -37,9 +37,9 @@ GXDITVIEWSOURCES = \
 GXDITVIEW_GROFF_VERSION_H=src/devices/xditview/groff_version.h
 
 $(GXDITVIEW_GROFF_VERSION_H): $(top_srcdir)/.version
-	$(AM_V_at)$(MKDIR_P) `dirname $@` \
-	&& $(AM_V_GEN)printf \
-	    'const char *Version_string = "%s";\n' '@VERSION@' > $@
+	$(AM_V_at)$(MKDIR_P) `dirname $@`
+	$(AM_V_GEN)printf \
+	  'const char *Version_string = "%s";\n' '@VERSION@' > $@
 
 if WITHOUT_X11
 GXDITVIEW_MAN1 =
